After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678448 - [0.10] clockoverlay regression: segfault
[0.10] clockoverlay regression: segfault
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
0.10.x
Other All
: Normal blocker
: 0.10.37
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-20 07:30 UTC by Nicola
Modified: 2012-06-21 13:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
textoverlay: add missing format from shaded background formats list (1.01 KB, patch)
2012-06-21 05:47 UTC, Thiago Sousa Santos
committed Details | Review

Description Nicola 2012-06-20 07:30:07 UTC
the shaded-background property for clockoverlay element cause segfault in recent 0.10 (today git) if setted to true while works fine with released version:

gst-launch videotestsrc ! video/x-raw-yuv,width=320,height=240,framerate=5/1 ! clockoverlay text="overlay 1234" shaded-background=true ! fakesink

produce:

ERROR:gsttextoverlay.c:1685:gst_text_overlay_push_frame: code should not be reached

Program received signal SIGABRT, Aborted.

Thread 140737251464960 (LWP 11090)

  • #0 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 64
  • #1 __GI_abort
    at abort.c line 91
  • #2 g_assertion_message
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #3 gst_text_overlay_push_frame
    at gsttextoverlay.c line 1685
  • #4 gst_text_overlay_video_chain
    at gsttextoverlay.c line 2139
  • #5 gst_pad_chain_data_unchecked
    at gstpad.c line 4271
  • #6 gst_pad_push_data
    at gstpad.c line 4506
  • #7 gst_pad_push
    at gstpad.c line 4730
  • #8 gst_base_transform_chain
    at gstbasetransform.c line 2687
  • #9 gst_pad_chain_data_unchecked
    at gstpad.c line 4271
  • #10 gst_pad_push_data
    at gstpad.c line 4506
  • #11 gst_pad_push
    at gstpad.c line 4730
  • #12 gst_base_src_loop
    at gstbasesrc.c line 2567
  • #13 gst_task_func
    at gsttask.c line 328
  • #14 ??
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #15 ??
    from /lib/x86_64-linux-gnu/libglib-2.0.so.0
  • #16 start_thread
    at pthread_create.c line 308
  • #17 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #18 ??

removing shaded-background=true or setting this property to false make the pipeline work
Comment 1 Thiago Sousa Santos 2012-06-21 05:47:07 UTC
Created attachment 216899 [details] [review]
textoverlay: add missing format from shaded background formats list

YUY2 was missing from the possible formats for the shaded-background
creation
Comment 2 Nicola 2012-06-21 06:17:13 UTC
the patch solve the issue, thanks!
Comment 3 Thiago Sousa Santos 2012-06-21 13:52:24 UTC
f7054fecd527109d9842f1def9d24f7c98487c33

Fixed