textoverlay: add missing format from shaded background formats list

YUY2 was missing from the possible formats for the shaded-background
creation

https://bugzilla.gnome.org/show_bug.cgi?id=678448